removed some section for further review

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header class="l-header">
       <nav class="nav bd-grid">
         <div>
-          <a href="#" class="nav__logo">Marlon</a>
+          <a href="#" class="nav__logo">David</a>
         </div>
 
         <div class="nav__menu" id="nav-menu">
@@ -56,7 +56,7 @@
             Hi,<br />I'am
             <span class="home__title-color"
               ><br />
-              Ibeanusi David Uchechukwu</span
+              Ibeanusi U David </span
             ><br />Full Stack Web Developer
           </h1>
 
@@ -298,12 +298,27 @@
               </div>
             </div>
           </div>
-
           <div>
-            <img src="assets/img/dolistify page.jpg" alt="" class="skills__img" />
-            <button class="skill_todolist_link"  >
-                <a href="dolistify.vercel.app" > Dolistify <a/>
-            </button>
+            <div>
+              <img
+                src="assets/img/dolistify page.jpg"
+                alt=""
+                class="skills__img"
+              />
+                <a class="skill_todolist_link" rel="noopener" href="https://dolistify.vercel.app" target="_blank">
+                    Dolistify
+                </a>
+            </div>
+            <div>
+              <img
+                src="assets/img/dolistify add new task.jpg"
+                alt=""
+                class="skills__img"
+              />
+              <!-- <button class="skill_todolist_link"> -->
+                <!-- <a href="/" target="_blank">Dolistify</a> -->
+              <!-- </button> -->
+            </div>
           </div>
         </div>
       </section>
@@ -320,7 +335,7 @@
         </div>
       </section> -->
 
-      <!--===== CONTACT =====-->
+      <!-- ===== CONTACT =====
       <section class="contact section" id="contact">
         <h2 class="section-title">Contact</h2>
 
@@ -342,7 +357,7 @@
             />
           </form>
         </div>
-      </section>
+      </section> -->
     </main>
 
     <!--===== FOOTER =====-->
